<?xml version="1.0" encoding="utf-8"?>
<!--  ownCloud Android Library is available under MIT license
   Copyright (C) 2016 ownCloud GmbH.
    
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
   in the Software without restriction, including without limitation the rights
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
   
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
   
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, 
   EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
   MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND 
   NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS 
   BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN 
   ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN 
   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
   THE SOFTWARE.

 -->
 
<resources>
    <string name="app_name">ownCloud Sample Client</string>
    <string name="refresh">Refresh</string>
    <string name="check_server">Check server</string>
    <string name="upload">Upload</string>
    <string name="delete_remote_file">Delete remote file</string>
    <string name="download">Download</string>
    <string name="delete_local_file">Delete local file</string>
    <string name="youre_doing_it_wrong">You\'re doing it wrong</string>
    <string name="todo_start_refresh">TODO: start refresh</string>    
    <string name="todo_start_upload">TODO: start upload</string>    
	<string name="todo_start_remote_deletion">TODO: start remote deletion</string>    
	<string name="todo_start_download">TODO: start download</string>    
    <string name="todo_start_local_deletion">TODO: start local deletion</string>
    <string name="todo_operation_finished_in_success">TODO: operation finished in success</string>    
    <string name="todo_operation_finished_in_fail">TODO: operation finished in fail</string>
    <string name="upload_folder_path">to_upload</string>
    <string name="download_folder_path">downloaded</string>
    <string name="error_copying_sample_file">Sample file could not be saved in temporal folder; upload will not work</string>
    <string name="sample_file_name">oc_sample.png</string>    
    <string name="sample_file_mimetype">image/png</string>
    <string name="error_deleting_local_file">Downloaded file could not be deleted</string>   
</resources>
