<?xml version="1.0" encoding="utf-8"?>
<!--  ownCloud Android Library is available under MIT license
   Copyright (C) 2016 ownCloud GmbH.
    
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
   in the Software without restriction, including without limitation the rights
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
   
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
   
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, 
   EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
   MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND 
   NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS 
   BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN 
   ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN 
   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
   THE SOFTWARE.

 -->
 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/button_refresh"
        style="@style/ButtonStyle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:enabled="false"
        android:onClick="onClickHandler"
        android:text="@string/refresh"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_check_server"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/server_address"
        android:layout_alignBottom="@+id/server_address"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickHandler"
        android:text="@string/check_server"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_upload"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_refresh"
        android:visibility="invisible">
    </ListView>

    <Button
        android:id="@+id/button_upload"
        style="@style/ButtonStyle"
        android:layout_above="@+id/frame"
        android:layout_alignParentLeft="true"
        android:enabled="false"
        android:onClick="onClickHandler"
        android:text="@string/upload"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/upload_progress"
        style="@style/ProgressStyle"
        android:layout_above="@id/frame"
        android:layout_below="@id/list_view"
        android:layout_toLeftOf="@+id/button_delete_remote"
        android:layout_toRightOf="@id/button_upload"
        android:enabled="false"
        android:gravity="center"
        android:text="0%"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <Button
        android:id="@id/button_delete_remote"
        style="@style/ButtonStyle"
        android:layout_above="@id/frame"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:onClick="onClickHandler"
        android:text="@string/delete_remote_file"
        android:visibility="invisible"/>

    <FrameLayout
        android:id="@id/frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/button_download"
        >
    </FrameLayout>

    <Button
        android:id="@id/button_download"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:enabled="false"
        android:onClick="onClickHandler"
        android:text="@string/download"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/download_progress"
        style="@style/ProgressStyle"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/frame"
        android:layout_toLeftOf="@+id/button_delete_local"
        android:layout_toRightOf="@id/button_download"
        android:enabled="false"
        android:gravity="center"
        android:text="0%"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <Button
        android:id="@id/button_delete_local"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:onClick="onClickHandler"
        android:text="@string/delete_local_file"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/server_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_check_server"
        android:layout_toStartOf="@+id/button_check_server"
        android:ems="10"
        android:hint="Server address (with http or https)"
        android:inputType="textPersonName"/>

</RelativeLayout>

